[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://trial.gd" type="Script" id=2]
[ext_resource path="res://resizePath.gd" type="Script" id=3]
[ext_resource path="res://down_and_up.tres" type="Animation" id=4]

[sub_resource type="Animation" id=1]
resource_name = "event"
length = 10.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_paths"
} ]
}

[node name="Node2D" type="PathFollow2D"]
self_modulate = Color( 0.580392, 0.631373, 0.85098, 0.701961 )
rotate = false
loop = false
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
show_behind_parent = true
z_index = 1
texture = ExtResource( 1 )

[node name="movement" type="AnimationPlayer" parent="."]
anims/down_and_up = ExtResource( 4 )
script = ExtResource( 2 )

[node name="event" type="AnimationPlayer" parent="."]
anims/event = SubResource( 1 )

[connection signal="animationPlayer" from="." to="movement" method="_on_Node2D_animationPlayer"]
[connection signal="play" from="." to="movement" method="_on_Node2D_play"]
[connection signal="reforwardAnimation" from="." to="movement" method="_on_Node2D_reforwardAnimation"]
[connection signal="rewindAnimation" from="." to="movement" method="_on_Node2D_rewindAnimation"]
[connection signal="stop" from="." to="movement" method="_on_Node2D_stop"]
[connection signal="animation_finished" from="movement" to="." method="_on_movement_animation_finished"]
